Fix sponsor label spacing and max logo size

--- a/pulse-300x600/sass/global.scss
+++ b/pulse-300x600/sass/global.scss
@@ -74,7 +74,7 @@
     font-family: "FranklinITCProBold", "HelveticaNeue", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     margin: 0;
     overflow: hidden;
-    padding: 10px 10px 15px 10px;
+    padding: 10px 10px 5px 10px;
 }
 
 .pulse-article-label:before {
@@ -298,6 +298,10 @@
 .pulse-footer { 
     padding: 0 0 3px 0;
     text-align: center;
+}
+
+.pulse-footer-logo {
+    max-width: 260px;
 }
 
 .pulse-slideshow-footer { 
